solution/app/redis-queue/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-queue
spec:
  podSelector:
    matchLabels:
      app: redis-queue
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          redis-access: "true"
    ports:
    - protocol: TCP
      port: 6379
